# aso

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  br.sh  brv.sh  compile_shaders.sh  flake.nix  install_deps.sh
assets/: triangle.vert
src/: aso.cpp  aso.h  base.h  clock.h  core.h  gfx.cpp  gfx.h  gpu.cpp  gpu.h  input.cpp  input.h  io.cpp  io.h  main.cpp  math.h  mem.cpp  mem.h  sdl.cpp  sdl.h  window.cpp  window.h
src/gpu/: gpu.cpp  gpu.h  gpu_config.h  gpu_device.cpp  gpu_device.h  gpu_frame.cpp  gpu_frame.h  gpu_pipeline.cpp  gpu_pipeline.h  gpu_scene.cpp  gpu_scene.h  gpu_swapchain.cpp  gpu_swapchain.h
